--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
+    "framer-motion": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.4",
-		"styled-components": "^5.3.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,11 +45,11 @@
       "last 1 safari version"
     ]
   },
-  	"devDependencies": {
-		"@tailwindcss/forms": "^0.5.2",
-		"@testing-library/dom": "^8.20.0",
-		"autoprefixer": "^10.4.7",
-		"postcss": "^8.4.21",
-		"tailwindcss": "^3.0.24"
-	}
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "@testing-library/dom": "^8.20.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.0.24"
+  }
 }
