--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "build:css": "postcss src/css/tailwind.css -o src/css/main.css",
     "test": "react-scripts test",
@@ -51,6 +51,7 @@
     "@testing-library/dom": "^8.20.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.0.24"
   }
 }
