--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build": "react-scripts build",
     "build:css": "postcss src/css/tailwind.css -o src/css/main.css",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "npm run build:css && react-scripts start"
   },
   "eslintConfig": {
     "extends": [
