--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "@testing-library/dom": "^8.20.0",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
