--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.4",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "@testing-library/dom": "^8.20.0",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.21",
